# bsp-lib

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: rust.yml
maps/: .gitkeep
src/: bsp.rs  header.rs  lib.rs  math.rs  parsing.rs  relational.rs
src/__test__/: mod.rs  relations.rs
src/lumps/: clip_nodes.rs  entities.rs  faces.rs  leaves.rs  light_map.rs  mod.rs  models.rs  nodes.rs  planes.rs  surfaces.rs  tex_info.rs  textures.rs  vertices.rs  vis.rs
src/parsing/: decoding.rs  entities.rs  geometry.rs  misc.rs  mod.rs  textures.rs
