[package]
name = "bsp-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.16.0", features = ["derive"] }
peg = "0.8.3"

[dev-dependencies]
rstest = "0.21.0"
rstest_reuse = "0.7.0"
